modifiche alla swagger.yaml
